--- a/tut/layout/custels/fraglist/index.html
+++ b/tut/layout/custels/fraglist/index.html
@@ -5,7 +5,7 @@
     window.ENV = '0' //- for comps, but it is also in scope for Pug for ENV logic
     
   </script>
-  <title></title>
+  <title>Rambo - Last Blood</title>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
   <script src="https://cdn.jsdelivr.net/npm/johnnydepp@0.1.0/dist/depp.js"></script>
@@ -29,7 +29,7 @@
     <p></p>
     <button class="btn butOff classless" id="next" disabled="disabled">Next </button>
   </div>
-<!-- mB v6.09.18 on 2019-09-23T22:09:29.224Z --></body>
+<!-- mB v6.09.18 on 2019-09-23T23:14:34.504Z --></body>
 <style>
    .fragCont {
        display: flex;
