--- a/tut/layout/custels/fraglist/index.pug
+++ b/tut/layout/custels/fraglist/index.pug
@@ -1,6 +1,6 @@
 head
     include /layout/headFrag
-    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.1/src/css/min.min.css')
+    link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.2/src/css/min.min.css')
 
 body
 
@@ -15,20 +15,17 @@ body
         button#next.btn.butOff.classless(disabled) Next 
 
         template#temp1
-            .fragTitle {{#.}} {{title}}
-            hr
-            br
+            span {{#.}}
+                .fragTitle {{title}}
+                hr
+                br
             span {{/.}}
-
     
 style.
 
-    hr {
-        color: black;
-        border: 1px solid;
-    }
 
     .fragCont {
+        margin-left: 1em;
         display: flex;
         flex-direction: column;
         height: calc(100% - 1.5em);
@@ -38,10 +35,7 @@ style.
     }
 
     .fragTitle {
-        font-weight: bold;
-    }
-    .btn {
-        width: 8em;
+        font-weight: 400;
     }
 
     .butOn {
@@ -56,11 +50,8 @@ style.
 
 script.
     toolBeltDefault()
+    loadFonts(['Open+Sans:300,400'])
 
-    function renderMustache(id, data) {
-        let template = document.getElementById(id).innerHTML
-        return Mustache.render(template, data)
-    }
 
     depp.require(['jquery', 'pagination', 'mustache', 'js-yaml', 'poly'], function() {
         console.log('ready')
