--- a/tut/layout/custels/fraglist/index.pug
+++ b/tut/layout/custels/fraglist/index.pug
@@ -57,16 +57,17 @@ script.
 
 
     function onRowClick(el) {
-        const selector = 'tr'
-        var iel = el.target.closest(selector)
-        if (!iel) return
 
-        var id = iel.getAttribute('data-name')
-        console.log(id)
+        const selector = '.fragTitle'
+        var cel = el.target.closest(selector)
+        if (!cel) return
+        console.log(cel)
 
-        let proB = CustelsListVM.fetchCode(id)
+        var title = cel.innerText
+        console.log(title)
 
-        CustelsListVM.setText(proB)
+        disE('titleClick', title)
+
     }//()
 
     depp.require(['jquery', 'pagination', 'mustache', 'js-yaml', 'poly'], function() {
@@ -77,17 +78,19 @@ script.
             onFragData(dat.frags)
         })
 
-        var table = document.getElementById('data-container')
-        table.addEventListener('click', onRowClick)
- 
-        document.getElementById("prev").addEventListener("click", function(){
-                console.log('P')
-                $('#pagination-container').pagination('previous')
-            })
+        depp.require('DOMDelayed', function() {
+            var table = document.getElementById('data-container')
+            table.addEventListener('click', onRowClick)
+    
+            document.getElementById("prev").addEventListener("click", function(){
+                    console.log('P')
+                    $('#pagination-container').pagination('previous')
+                })
 
-        document.getElementById("next").addEventListener("click", function(){
-            console.log('N')
-            $('#pagination-container').pagination('next')
+            document.getElementById("next").addEventListener("click", function(){
+                console.log('N')
+                $('#pagination-container').pagination('next')
+        })
         })
         
     })// req
@@ -116,7 +119,8 @@ script.
 
         console.log('data')
         var computedItems = $('.pagCont').height() / 40   // pixels    
-        console.log( $('.pagCont').height(), computedItems ) 
+
+        console.log('ci', $('.pagCont').height(), computedItems ) 
 
         $('#pagination-container').pagination({
             pageSize: computedItems,
@@ -128,8 +132,7 @@ script.
 
             callback: function(data, pagination) { // on page
                 console.log('pg')
-                //pg, sz, tot
-                setTimeout(function(){
+                setTimeout(function(){ //pg, sz, tot
                     showHide(pagination.pageNumber, pagination.pageSize, pagination.totalNumber)
                 },1)
 
@@ -141,12 +144,11 @@ script.
     }//()
 
     function showHide(pg, sz, tot) {
-        console.log('sh')
         if(pg==1)  { but('prev', false ) }
             else but('prev', true) 
 
         var cur = pg * sz
-        console.log(cur, tot)
+        console.log('sh', cur, tot)
         if(cur < tot) { // more 
             but('next', true) 
         } else { // to much
