--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -8,22 +8,22 @@ body
             p oh hi
             hr
 
-        span.mid
-            #left.split
-                // http://dinbror.dk/blog/how-to-preload-entire-html5-video-before-play-solved/
-                .media_container
-                    Xvideo#vid1.vid( autoplay preload='auto' loop muted )
-                        source(src='arc2.mp4' type="video/mp4" )
+        span.main
+            #left.split.media_container
+                //video#vid1.vid( autoplay preload='auto' loop muted )
+                    source(src='arc2.mp4' type="video/mp4" )
+                
+                //.mainBot
+                    hr
+                    p oh hi
+                    hr
 
             #right.split
                 div
                     button Up
                     p
                     button Down
-        .bot
-            hr
-            p oh hi
-            hr
+       
 
     style.
         /* video detach button */
@@ -48,17 +48,16 @@ body
             flex-direction: column;
         }
 
-        .mid {
-            display: flex;
+        .main {
             flex-grow: 1;
-
-            max-width: 10vw;
-            min-width: 50vw;
-            max-height: 100vh;
-            min-height: 50vh;
-
+            display: flex; /* second flex level */
+            flex-direction: row;
         }
-
+        
+        .split {
+            overflow: hidden;
+        }
+        
         .media_container { /* fluid */
             flex-grow: 1;
             position: relative;
@@ -68,7 +67,7 @@ body
             padding-bottom: 56.25%;
             padding-top: 25px;
             
-            border:  3px solid yellow;
+            border:  1px solid yellow;
             background: black;	
         }
 
@@ -79,7 +78,7 @@ body
             width:  100%;
             height: 100%;
 
-            border:  1px solid red;
+            border:  3px solid red;
             background: teal;	
          }
 
@@ -101,7 +100,6 @@ body
             if(nw>w)
                 $('#vid1').width(nw)
 
-
             // margin
             nh= nh - h
             nh = nh/2
@@ -114,20 +112,14 @@ body
 
         toolBeltDefault()
         depp.require(['split', 'DOMDelayed', 'jquery'], function() {
-            console.log('ready!')
-            resizeVid()
             
-            /*var spLR = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
-                direction: 'horizontal',
-                sizes: [90, 10],
+            var sp = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
+                dXirection: 'horizontal',
+                sizes: [80, 20],
                 minSize: 0
-            })*/
-            //console.log(sp.getSizes())
-            /*var spUD = Split( [document.querySelector('.mid'), document.querySelector('.bot)] , {
-                direction: 'horizontal',
-               sizes: [90, 10],
-               minSize: 0
             })
-            */
+            console.log('ready!')
 
+            //resizeVid()
+            
         })//depp
