--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -41,17 +41,26 @@ body
         html, body { 
             width: 100%; 
             height: 100%; 
+            overflow: hidden;
         }
 
         .cont {
             display: flex;
             flex-direction: column;
+            height: 100vh;
+            max-height: 100vh;
+             margin: 0; padding: 0;         
         }
 
         .main {
             flex-grow: 1;
             display: flex; /* second flex level */
             flex-direction: row;
+        }
+
+        .gutter {
+            background-color: gray;
+            width: 10px;
         }
         
         .split {
