--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -3,17 +3,19 @@ head
     link(rel='stylesheet', href='https://cdn.jsdelivr.net/gh/intuition-dev/intuDS@v1.0.3/src/css/min.min.css')
 
 body
-    .cont
+    .pgCont
         .top
             p oh hi
             hr
 
-        span.main
-            #left.split.media_container
-                //video#vid1.vid( autoplay preload='auto' loop muted )
-                    source(src='arc2.mp4' type="video/mp4" )
-                
-                //.mainBot
+        span.splitCont
+            #left.split
+                .main
+                    .mediaContainerTop
+                        //vXideo#vid1.vid( autoplay preload='auto' loop muted )
+                            source(src='arc2.mp4' type="video/mp4" )
+                        
+                    .mainBot
                     hr
                     p oh hi
                     hr
@@ -43,59 +45,61 @@ body
             height: 100%; 
             overflow: hidden;
         }
-
-        .cont {
+        .pgCont {
             display: flex;
             flex-direction: column;
             height: 100vh;
             max-height: 100vh;
-             margin: 0; padding: 0;         
         }
-
-        .main {
+        .splitCont {
             flex-grow: 1;
-            display: flex; /* second flex level */
-            flex-direction: row;
         }
-
         .gutter {
             background-color: gray;
             width: 10px;
         }
-        
         .split {
             overflow: hidden;
         }
-        
-        .media_container { /* fluid */
+
+        .main {
+            display: flex; /* second flex level */
+            flex-direction: column;
+
+            border:  3px solid yellow;
+            background: purple;	
+        }
+        .mediaContainerTop { /* fluid */
             flex-grow: 1;
             position: relative;
-            width:  100%; 
-            height: 100%;
-   
-            padding-bottom: 56.25%;
-            padding-top: 25px;
             
-            border:  1px solid yellow;
+            border:  1px solid red;
             background: black;	
         }
+        .mainBot {
+            flex-grow: 1;
+            background-color: green;
 
-        .vid { /* ratio */
+            border:  1px solid blue;
+            background: silver;	           
+        }
+
+        .Xvid { /* ratio */
         	position: absolute;
             top: 0;
             left: 0;
-            width:  100%;
-            height: 100%;
+            Xwidth:  100%;
+            Xheight: 100%;
 
             border:  3px solid red;
             background: teal;	
          }
 
     script.
-        //window.addEventListener('resize', resizeVid) 
+        window.addEventListener('resize', resizeVid) 
         function resizeVid() {
-            var w = $('.media_container').width()
-            var h = $('.media_container').height()
+            var w = $('.mediaContainerTop').width()
+            var h = $('.mediaContainerTop').height()
             var nh = w * 0.5625
             var nw = h * 1.7777
 
@@ -123,12 +127,12 @@ body
         depp.require(['split', 'DOMDelayed', 'jquery'], function() {
             
             var sp = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
-                dXirection: 'horizontal',
+                direction: 'horizontal',
                 sizes: [80, 20],
                 minSize: 0
             })
             console.log('ready!')
 
-            //resizeVid()
+            resizeVid()
             
         })//depp
