--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -12,13 +12,13 @@ body
             #left.split
                 .main
                     .mediaContainerTop
+                        p oh hi
                         //vXideo#vid1.vid( autoplay preload='auto' loop muted )
                             source(src='arc2.mp4' type="video/mp4" )
                         
                     .mainBot
-                    hr
-                    p oh hi
-                    hr
+            
+                        p oh hi
 
             #right.split
                 div
@@ -43,7 +43,6 @@ body
         html, body { 
             width: 100%; 
             height: 100%; 
-            overflow: hidden;
         }
         .pgCont {
             display: flex;
@@ -58,27 +57,27 @@ body
             background-color: gray;
             width: 10px;
         }
-        .split {
-            overflow: hidden;
-        }
 
+        .top {
+            height: 3.5em;
+        }
         .main {
             display: flex; /* second flex level */
             flex-direction: column;
+            height: calc(100% - 3.4em);
 
             border:  3px solid yellow;
-            background: purple;	
+            background: gren;	
         }
         .mediaContainerTop { /* fluid */
             flex-grow: 1;
             position: relative;
             
             border:  1px solid red;
-            background: black;	
+            background: gray;	
         }
         .mainBot {
             flex-grow: 1;
-            background-color: green;
 
             border:  1px solid blue;
             background: silver;	           
