--- a/tut/items/two/index.pug
+++ b/tut/items/two/index.pug
@@ -8,7 +8,7 @@ body
             p oh hi
             hr
 
-        span.splitCont
+        .splitCont
             #left.split
                 .main
                     .mediaContainerTop
@@ -43,6 +43,7 @@ body
         html, body { 
             width: 100%; 
             height: 100%; 
+            overflow: hidden;
         }
         .pgCont {
             display: flex;
@@ -67,10 +68,10 @@ body
             height: calc(100% - 3.4em);
 
             border:  3px solid yellow;
-            background: gren;	
+            background: green;            
         }
         .mediaContainerTop { /* fluid */
-            flex-grow: 1;
+            flex-grow: 0;
             position: relative;
             
             border:  1px solid red;
@@ -95,29 +96,23 @@ body
          }
 
     script.
+        window.split = null
         window.addEventListener('resize', resizeVid) 
         function resizeVid() {
-            var w = $('.mediaContainerTop').width()
-            var h = $('.mediaContainerTop').height()
+            var w = $('.main').width()
+            var h = $('.main').height() - $('.mainBot').height()
+
+            // math:
             var nh = w * 0.5625
-            var nw = h * 1.7777
+            var nw = h * 1.7777 //based on new hn
 
-             // now math    
-            console.log('>>>>')
-            console.log('w', w, h, nw, nh)
-
-            if(nh > h)
-                $('#vid1').height(nh)
+            nw = nw-5
             
-            if(nw>w)
-                $('#vid1').width(nw)
-
-            // margin
-            nh= nh - h
-            nh = nh/2
-            nh = nh + 'px'
-            console.log('w', w, h, nw, nh)
-            //$('#vid1').css('margin-top', nh )
+            console.log('>>>>')
+            console.log('c:', w, h, nw, nh)
+            $('.mediaContainerTop').width( nw)
+            $('.mediaContainerTop').height(  nh)
+            console.log('c:', w, h, nw, nh)
             console.log('<<<')
         }//()
 
@@ -125,10 +120,11 @@ body
         toolBeltDefault()
         depp.require(['split', 'DOMDelayed', 'jquery'], function() {
             
-            var sp = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
+            window.split = Split( [document.querySelector('#left'), document.querySelector('#right')] , {
                 direction: 'horizontal',
-                sizes: [80, 20],
-                minSize: 0
+                sizes: [90, 10],
+                minSize: [100, 0]
+
             })
             console.log('ready!')
 
